--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 			<div class="news_list">
 				<ul>
 					<li><a href="list.html">【慕客访谈 用户篇】“有为屌丝”在路上</a><span>2014-06-01</span></li>
-					<li><a href="#">【有奖活动】给父亲的三行书信</a><span>2014-06-01</span></li>
-					<li><a href="#">【程序猿，请晒出你的童年】活动获奖公告</a><span>2014-05-30</span></li>
-					<li><a href="#">【慕课访谈】破茧成蝶——美女程序员的蜕变史</a><span>2014-05-28</span></li>
+					<li><a href="list.html">【有奖活动】给父亲的三行书信</a><span>2014-06-01</span></li>
+					<li><a href="list.html">【程序猿，请晒出你的童年】活动获奖公告</a><span>2014-05-30</span></li>
+					<li><a href="list.html">【慕课访谈】破茧成蝶——美女程序员的蜕变史</a><span>2014-05-28</span></li>
 				</ul>
 			</div>
 		</div><!-- news结束 -->
