--- a/list.html
+++ b/list.html
@@ -57,12 +57,12 @@
 			<h2>新闻中心</h2>
 			<div class="news_type_content">
 				<ul>
-					<li><a href="list.html">行业新闻</a></li>
-					<li><a href="list.html">媒体报道</a></li>
-					<li><a href="list.html">活动专题</a></li>
-					<li><a href="list.html">精彩视频</a></li>
-					<li><a href="list.html">资源下载</a></li>
-					<li><a href="list.html">公司内刊</a></li>
+					<li><a href="#">行业新闻</a></li>
+					<li><a href="#">媒体报道</a></li>
+					<li><a href="#">活动专题</a></li>
+					<li><a href="#">精彩视频</a></li>
+					<li><a href="#">资源下载</a></li>
+					<li><a href="#">公司内刊</a></li>
 				</ul>
 			</div>
 		</div><!-- news_type -->
@@ -70,14 +70,14 @@
 			<h2>新闻中心</h2>
 			<div class="news_list">
 				<ul>
-					<li><a href="#">【慕客访谈 用户篇】“有为屌丝”在路上</a><span>2014-06-01</span></li>
-					<li><a href="#">【有奖活动】给父亲的三行书信</a><span>2014-06-01</span></li>
-					<li><a href="#">【程序猿，请晒出你的童年】活动获奖公告</a><span>2014-05-30</span></li>
-					<li><a href="#">【慕课访谈】破茧成蝶——美女程序员的蜕变史</a><span>2014-05-28</span></li>
-					<li><a href="#">【慕客访谈 用户篇】“有为屌丝”在路上</a><span>2014-06-01</span></li>
-					<li><a href="#">【有奖活动】给父亲的三行书信</a><span>2014-06-01</span></li>
-					<li><a href="#">【程序猿，请晒出你的童年】活动获奖公告</a><span>2014-05-30</span></li>
-					<li><a href="#">【慕课访谈】破茧成蝶——美女程序员的蜕变史</a><span>2014-05-28</span></li>
+					<li><a href="news.html">【慕客访谈 用户篇】“有为屌丝”在路上</a><span>2014-06-01</span></li>
+					<li><a href="news.html">【有奖活动】给父亲的三行书信</a><span>2014-06-01</span></li>
+					<li><a href="news.html">【程序猿，请晒出你的童年】活动获奖公告</a><span>2014-05-30</span></li>
+					<li><a href="news.html">【慕课访谈】破茧成蝶——美女程序员的蜕变史</a><span>2014-05-28</span></li>
+					<li><a href="news.html">【慕客访谈 用户篇】“有为屌丝”在路上</a><span>2014-06-01</span></li>
+					<li><a href="news.html">【有奖活动】给父亲的三行书信</a><span>2014-06-01</span></li>
+					<li><a href="news.html">【程序猿，请晒出你的童年】活动获奖公告</a><span>2014-05-30</span></li>
+					<li><a href="news.html">【慕课访谈】破茧成蝶——美女程序员的蜕变史</a><span>2014-05-28</span></li>
 				</ul>
 			</div>
 			<div class="page">
