--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<a href="news.html" class="sidebar_title_right">More&gt;&gt;</a>
 			</div>
 			<div class="sidebar_video">
-			<embed src="http://player.youku.com/player.php/Type/Folder/Fid/27198547/Ob/1/sid/XMTU2MDIxMjQ2OA==/v.swf" quality="high" width="220" height="140" align="middle" allowScriptAccess="always" allowFullScreen="true" mode="transparent" type="application/x-shockwave-flash"></embed>
+			<embed src="//player.youku.com/player.php/Type/Folder/Fid/27198547/Ob/1/sid/XMTU2MDIxMjQ2OA==/v.swf" quality="high" width="220" height="140" align="middle" allowScriptAccess="always" allowFullScreen="true" mode="transparent" type="application/x-shockwave-flash"></embed>
 			</div>
 			<div class="sidebar_ad">
 				<a href="http://player.youku.com/player.php/Type/Folder/Fid/27198547/Ob/1/sid/XMTU2MDIxMjQ2OA==/v.swf"><img src="images/app.jpg"></a>
