--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</div>
 			<div class="nav_mid_right">
 				<form action=" " method="post">
-					<input type="text" class="search_text" />
+					<input type="text" class="search_text" placeholder="请输入您想搜索的内容" />
 				</form>
 			</div>
 		</div><!-- nav_mid结束 -->
